docs(guides): add some gitignore stuff to main guide

--- a/packages/tools/docusaurus/docs/guides/create/design.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/design.mdx
@@ -1100,6 +1100,16 @@ There are valid arguments to make for both sides, so you should just follow what
 
 </Admonition>
 
+We'll add it to our `.gitignore`:
+
+```bash .gitignore focus=4:5
+# Node
+node_modules
+
+# kickstartDS
+src/token/tokens.css
+```
+
 ### Fine tune the design
 
 Once the `Design Token` are generated, the Design System will already have the broad look & feel of your Corporate Design!<br/>
