--- a/packages/tools/docusaurus/docs/guides/create/start.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/start.mdx
@@ -43,6 +43,7 @@ touch .gitignore
 Add the `node_modules` folder to it for now:
 
 ```bash .gitignore
+# Node
 node_modules
 ```
 
@@ -97,14 +98,6 @@ Enter the prompted information, and you'll end up with a `package.json` describi
 }
 ```
 
-```bash .nvmrc
-16.14
-```
-
-```bash .gitignore
-node_modules
-```
-
 </CH.Code>
 
 </CH.Section>
@@ -152,14 +145,6 @@ We'll pretend to start fresh:
   "author": "Jonas Ulrich",
   "license": "MIT"
 }
-```
-
-```bash .nvmrc
-16.14
-```
-
-```bash .gitignore
-node_modules
 ```
 
 </CH.Code>
@@ -264,6 +249,7 @@ This will leave us with the following files for now, at least if you've started 
 ```
 
 ```bash .gitignore
+# Node
 node_modules
 ```
 
